--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -2,6 +2,7 @@
   font-size: 18px;
   line-height: 30px;
   margin: 0;
+  padding-bottom: 24px;
 }
 
 @media (max-width: 768px){
@@ -13,8 +14,6 @@
 
 @media (max-width: 320px){
   .place__text {
-    font-size: 16px;
-    line-height: 26px;
     width: 90%;
     margin: auto;
   }
