--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,10 +4,12 @@
   background-color: #2A2C2F;
   position: absolute;
   top: 0;
+  left: 0;
   opacity: 0.3;
   z-index: -1;  
 }
 
 .cover__overlay:hover {
   opacity: 0.8;
+  transition: all 3s ease-out;
 }
