--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 @import url('./__subtitle/cover__subtitle.css');
 @import url('./__title/cover__title.css');
 @import url('./__overlay/cover__overlay.css');
+@import url('./__link/cover__link.css');
 
 .cover{
   margin: auto;
@@ -10,6 +11,7 @@
   background-image: url('../../images/cover-trains.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   z-index: 1;
   height: 740px;
   
