--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,8 +3,7 @@
   color: white;
 }
 
-@media (max-width: 320px){
-  .footer__link {
-    padding-top: 32px;
-  }
+.footer__link:hover {
+  opacity: 0.8;
+  transition: all 1s ease-out;
 }
