--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,17 +1,21 @@
-.footer__navigation {
+.footer__links {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
   justify-content: space-between;
   padding-top: 92px;
   font-size: 16px;
   line-height: 18px;
   min-width: 465px;
-  display: flex;
 }
 
-@media (max-width: 320px){
-  .footer__navigation {
+@media (max-width: 680px){
+  .footer__links {
     font-size: 24px;
     line-height: 24px;
     flex-direction: column;
     padding-top: 64px;
+    min-width: 0;
   }
 }
