--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,13 @@
-@import url('./_active/header__lang-link_active.css');
-@import url('./_non-active/header__lang-link_non-active.css');
-
 .header__lang-link {
   font-size: 24px;
   line-height: 28px;
   color: #FFFFFF;
   padding-left: 18px;
+  text-decoration: none;
+}
+.header__lang-link:hover {
+  opacity: 0.8;
+  transition: all 1s ease-out;
 }
 
 @media (max-width: 768px) {
