--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,22 +1,23 @@
 .header__logo {
-  position: absolute;
   width: 176px;
   height: 52px;
-  left: 48px;
-  top: 28px;
+  padding-left: 48px;
+  padding-top: 28px;
 }
 
 @media (max-width: 768px) {
  .header__logo {
-      left: 24px;
+   padding-left: 24px;
+   padding-top: 28px;
+
  }
 }
 
 @media (max-width: 320px) {
     .header__logo {
+      padding-left: 16px;
+      padding-top: 16px;
       width: 142px;
       height: 42px;
-      left: 16px;
-      top: 16px;
     }
 }
