--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,9 @@
 @import url('./__logo/header__logo.css');
 @import url('./__lang-link/header__lang-link.css');
 @import url('./__lang-links/header__lang-links.css');
+@import url('./__lang-link/_active/header__lang-link_active.css');
 
 .header {
-  position: relative;
-  min-height: 80px;
+  display: flex;
+  justify-content: space-between;
     }
-
-@media (max-width: 320px){
-  .header {
-     min-height: 58px;
-    }
-}
