--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,24 +1,5 @@
 .intro__list {
   list-style-type: none;
-  margin: 0 0 0 calc((1280px - 690px)/4);
+  margin: 0;
   padding: 32px 0 0 0;
-}
-
-@media (max-width: 1024px){
-  .intro__list {
-    margin-left: 4.6875vw;
-  }
-}
-
-@media (max-width: 768px){
-  .intro__list {
-    margin: auto;
-    max-width: 720px;
-  }
-}
-
-@media (max-width: 320px){
-  .intro__list {
-    max-width: 288px;
-  }
 }
