--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,22 +3,13 @@
   font-size: 54px;
   line-height: 58px;
   max-width: 690px;
-  margin: 0 0 0 11.5625vw;
   padding-top: 92px;
   text-align: left;
-  
-}
-
-@media (max-width: 1024px){
-  .intro__title {
-    margin-left: 4.6875vw;
-  }
+  margin: 0;
 }
 
 @media (max-width: 768px){
   .intro__title {
-    margin: auto;
-    max-width: 720px;
     padding-top: 88px;
   }
 }
@@ -27,7 +18,6 @@
   .intro__title {
     font-size: 32px;
     line-height: 35px;
-    max-width: 288px;
     padding-top: 64px;
   }
 }
