--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,4 +1,22 @@
 @import url('./__list-item/intro__list-item.css');
 @import url('./__list/intro__list.css');
 @import url('./__text/intro__text.css');
-@import url('./__title/intro__title.css')
+@import url('./__title/intro__title.css');
+@import url('./__span/intro__span.css');
+
+.intro {
+  margin-left: 148px;
+}
+
+@media (max-width: 768px){
+  .intro {
+    margin: auto;
+    width: 93.75%;
+  }
+}
+
+@media (max-width: 320px){
+  .intro {
+    width: 90%;
+  }
+}
