--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,3 +2,4 @@
 @import url('./__image/lead__image.css');
 @import url('./__subtitle/lead__subtitle.css');
 @import url('./__title/lead__title.css');
+@import url('./__image-block/lead__image-block.css')
