--- a/blocks/place/__heading/place__heading.css
+++ b/blocks/place/__heading/place__heading.css
@@ -2,10 +2,8 @@
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-  max-width: 460px;
+  width: 460px;
   margin: 0;
-  width: 50%;
-  display: inline-block;
 }
 
 @media (max-width: 1024px){
@@ -22,13 +20,12 @@
   }
 }
 
-@media (max-width: 320px){
+@media (max-width: 380px){
   .place__heading {
     font-size: 32px;
     line-height: 35px;
     width: 90%;
     display: block;
     margin: auto;
-    padding-bottom: 32px;
   }
 }
