--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -20,10 +20,11 @@
   }
 }
 
-@media (max-width: 320px){
+@media (max-width: 410px){
   .place__image {
     max-width: 320px;
     max-height: 320px;
-    margin: 0;
+    margin: 0 0 32px 0;
+    width: 100%;
   }
 }
