--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,9 +1,10 @@
 .root {
     background-color: #2A2C2F;
-    font-family: Inter;
+    font-family: 'Inter', ‘Arial’, sans-serif;
     font-style: normal;
     font-weight: normal;
     color: #ffffff;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    max-width: 1280px;
 }
