--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,7 +5,16 @@
 @import url('./__span/intro__span.css');
 
 .intro {
-  margin-left: 148px;
+  width: 76.875%;
+  margin: auto;
+  max-width: 984px;
+}
+
+@media (max-width: 1024px){
+  .intro {
+    margin: auto;
+    width: 90.625%;
+  }
 }
 
 @media (max-width: 768px){
@@ -20,3 +29,5 @@
     width: 90%;
   }
 }
+
+
