--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,9 +1,15 @@
 .cover__link {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(42, 44, 47, 0.3);
+  position: absolute;
+  top: 0;
+  left: 0;
   text-decoration: none;
   color: white;
 }
 
 .cover__link:hover {
-  opacity: 0.8;
-  transition: all 3s ease-out;
+  background-color: rgba(42, 44, 47, 0.8);
+  transition: all 1s ease-out;
 }
