--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,5 +6,5 @@
     color: #ffffff;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    max-width: 1280px;
+    min-width: 320px;
 }
