--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,11 +2,9 @@
   width: 100%;
   height: 100%;
   background-color: rgba(42, 44, 47, 0.3);
-  position: absolute;
-  top: 0;
-  left: 0;
   text-decoration: none;
   color: white;
+  display: block;
 }
 
 .cover__link:hover {
