--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,7 +5,6 @@
 .cover{
   margin: auto;
   margin-top: 92px;
-  position: relative;
   width: 92.5%;
   background-image: url('../../images/cover-trains.jpg');
   background-size: cover;
@@ -13,6 +12,7 @@
   background-position: center;
   z-index: 1;
   height: 740px;
+  max-width: 1184px;
   }
 
 @media (max-width: 1024px){
