--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,20 +1,13 @@
 .header__lang-links {
-  padding: 46px 48px 0 0;
+  padding: 46px 0 0 0;
   margin: 0;
   list-style-type: none;
   display: flex;
 
 }
 
-@media (max-width: 768px) {
-  .header__lang-links {
-    padding-right: 24px;  
-  }
- }
-
  @media (max-width: 320px) {
   .header__lang-links {
     padding-top: 30px;
-    padding-right: 16px;  
   }
  }
