--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,21 +2,9 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  width: 50%;
+  max-width: 640px;
   margin: auto;
   padding-top: 32px;
-}
-
-@media (max-width: 1024px){
-  .lead__subtitle {
-    width: 62.5%;
-  }
-}
-
-@media (max-width: 768px){
-  .lead__subtitle {
-    width: 83.3%;
-  }
 }
 
 @media (max-width: 320px){
