--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,7 +7,8 @@
  width: 92.5%;
  margin: auto;
  padding-top: 92px;
- max-width: 1280px;
+ max-width: 1184px;
+ justify-content: center;
 }
 
 @media (max-width: 1024px){
